# qgis-printer-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h
.github/workflows/: cmake-multi-platform.yml
.run/: dtoQJson.test1.run.xml  jingweiprinter-test.run.xml  jingweiprinter-ubt-nvidia.run.xml  jingweiprinter-ubt.run.xml  jingweiprinter.run.xml  jingweiprinter_tst.run.xml  noble-470-plain-nocache.run.xml  noble-470-plain.run.xml  noble-470.run.xml  noble-build-nocache.run.xml  noble-build-plain.run.xml  noble-build.run.xml
building/: base-github.dockerfile  base-proxy.dockerfile  base.docker  base.dockerfile  docker-compose.yaml  noble-460.docker  noble-470.docker  noble-470.dockerfile  noble-510.docker  noble-510.dockerfile  noble-515.docker  noble-515.dockerfile  noble-520.docker  noble-520.dockerfile  noble-535.docker  noble-535.dockerfile  noble-550-120.docker  noble-550-120.dockerfile  noble-550.docker  noble-550.dockerfile  noble-nnv-github-aarch64.dockerfile  noble-nnv-github.dockerfile  noble-nnv-local-aarch64.dockerfile  noble-nnv-local-runtime-aarch64.dockerfile  noble-nnv-proxy.dockerfile  noble-nnv.docker  noble-nnv.dockerfile  noble.docker  proxy.conf  qgis-boot.sh
building/QGIS/QGIS3/profiles/: profiles.ini
building/QGIS/QGIS3/profiles/default/: qgis-auth.db  qgis.db  symbology-style.db
building/QGIS/QGIS3/profiles/default/QGIS/: QGIS3.ini
building/release/: release.sh
common/input/: topicMap-dc.json  topicMap-jkg-v1.json  web_request_dc.json
conf/: config-71-hn.yaml  config-74-hn.yaml  config-dc34.yaml  config-prod.yaml  config.yaml
doc/camera/: cesium2qgis.md
doc/http/: hello.http  login-xserver-get-token.curl  login-xserver-get-token.http  plotting-dc-2d-34.http  plotting-dc-3d-34.http  plotting-dc-3d-camera-gxq-zz.http  plotting-dc-3d-camera-jinci.http  plotting-dc-3d-camera-local1.http  plotting-dc-3d-camera-local2.curl  plotting-dc-3d-camera-local2.http  plotting-dc-3d-camera-local3-back.http  plotting-dc-3d-camera-local4-back-moveleft.http  plotting-dc-3d-camera-local4-down.http  plotting-dc-3d-camera-local4-left.http  plotting-dc-3d-camera-local4-moveright.http  plotting-dc-3d-camera-local4-right.http  plotting-dc-3d-camera-local4-rightcorn.http  plotting-dc-3d-camera-local4-top.http  plotting-dc-3d-camera-local4-top1.http  plotting-dc-3d-camera-local4-top2.http  plotting-dc-3d-camera-local4-top3.http  plotting-dc-3d-camera-yingbinjie.http  plotting-dc-3d-camera.http  plotting-dc-3d-camera1.http  plotting-dc-3d.http  plotting-dc.http  plotting-zz.http  plotting-zz2.http  plotting-zz3.http  plotting-zz4.http  plotting.curl  plotting.http  plotting2d.http  plotting3d-jkg.http  plotting3d-test.http  plotting3d.curl  plotting3d.http  plotting3d_async.http  plotting_2d_async.http  plotting_async.http  (+7 more)
doc/http/async/: get-task.http  get-tasks.http  plotting-az.http  plotting-az01-dom.http  plotting-az01.http
doc/http/settings/: http-client.private.env.json
src/: CMakeLists.txt  ComponentQGIS.cmake  config.h.in  main.cpp
src/core/: AppComponent.h  bootapplication.cpp  bootapplication.h  confstarter.cpp  confstarter.h  hookstarter.cpp  hookstarter.h  loggerstarter.cpp  loggerstarter.h  processorstarter.cpp  processorstarter.h  qcorestarter.cpp  qcorestarter.h  qtwebstarter.cpp  qtwebstarter.h  starter.cpp  starter.h  startercontext.cpp  startercontext.h  starterregister.cpp  starterregister.h  webstarter.cpp  webstarter.h
src/core/controller/: AsyncPlottingController.cpp  AsyncPlottingController.h  HelloController.cpp  HelloController.h  PlottingController.cpp  PlottingController.h
src/core/dao/: PlottingTaskDao.cpp  PlottingTaskDao.h
src/core/enums/: PaperSpecification.cpp  PaperSpecification.h
src/core/error/: egonexception.cpp  egonexception.h  exceptions.cpp  exceptions.h
src/core/fetch/: LoginFetch.cpp  LoginFetch.h  PlottingFetch.cpp  PlottingFetch.h
src/core/handler/: hellohandler.cpp  hellohandler.h
src/core/handler/dto/: plotting.cpp  plotting.h
src/core/qgis/: App.cpp  App.h  Processor.cpp  Processor.h
src/core/qgis/d3/: CameraUtil.cpp  CameraUtil.h  ImageCaptureHelper.cpp  ImageCaptureHelper.h
src/core/qgis/layer/: BaseLayer.cpp  BaseLayer.h  JwCircle.cpp  JwCircle.h  JwGeometry.cpp  JwGeometry.h  JwLine.cpp  JwLine.h  JwPoint.cpp  JwPoint.h  JwPolygon.cpp  JwPolygon.h
src/core/qgis/layout/: JwLayout.cpp  JwLayout.h  JwLayout3D.cpp  JwLayout3D.h  JwLegend.cpp  JwLegend.h
src/core/qgis/payload/: InputPoint.cpp  InputPoint.h
src/core/qgis/style/: StyleCircle.cpp  StyleCircle.h  StyleLine.cpp  StyleLine.h  StylePoint.cpp  StylePoint.h  StylePolygon.cpp  StylePolygon.h
src/core/qgis/symbol/: SymbolCompose.cpp  SymbolCompose.h
src/core/service/: AsyncPlottingService.cpp  AsyncPlottingService.h  PlottingService.cpp  PlottingService.h
src/utils/: ColorTransformUtil.cpp  ColorTransformUtil.h  CompressUtil.cpp  CompressUtil.h  DateTimeUtil.cpp  DateTimeUtil.h  DegreeUtil.cpp  DegreeUtil.h  FileUtil.cpp  FileUtil.h  FontUtil.cpp  FontUtil.h  Formula.cpp  Formula.h  ImageUtil.cpp  ImageUtil.h  JsonUtil.cpp  JsonUtil.h  NodeToMap.cpp  NodeToMap.h  OApiClient.cpp  OApiClient.h  QgsUtil.cpp  QgsUtil.h  ShowDataUtil.cpp  ShowDataUtil.h  TypeConvert.cpp  TypeConvert.h  UrlUtil.cpp  UrlUtil.h  UuidUtil.cpp  UuidUtil.h
tests/: Base64Test.cpp  CMakeLists.txt  ColorTransformUtilTest.cpp  CompressUtilTest.cpp  DateTimeUtilTest.cpp  DegreeUtilTest.cpp  Formula-test.cpp  Formula-test.cpp.1  FormulaTest.cpp  GdalSqliteTest.cpp  GeometryTest.cpp  GeometryWktTest.cpp  JsonUtilTest.cpp  OatppCurlTest.cpp  OatppTest.cpp  PaperTest.cpp  PlottingCurlTest.cpp  PlottingTaskDaoTest.cpp  ProcessTest.cpp  QImageLoadTest.cpp  QListTest.cpp  QgsUtilTest.cpp  StarterOrderTest.cpp  UuidUtilTest.cpp  ViewFrustumTest.cpp  main.cpp  tiny_gltf.h
